--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -58,9 +58,11 @@
         <section>
             <h3 class="general-query">General Inquiries</h3>
             <ul> 
-                <li>If you have any question or feel unsure how to sign in to the Chamber
-                    let us help you before you take a decision, our board of members are
-                    happy to help with any question you might have.</li>
+                <li>
+                    <p>If you have any question or feel unsure how to sign in to the Chamber
+                        let us help you before you take a decision, our board of members are
+                        happy to help with any question you might have.</p>
+                </li>
 
                 <li>Board of Members<li>
                     <p>Reach us at: <br> boardqueries@pococichamber.org</p>
