--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
         <img src="images/logo.png" alt="Guapiles Chamber of Commerce logo" class="logo">
         <h1> Guapiles <span class="extra"><br> Chamber of Commerce </span></h1>
         <div class="social">
-            <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook logo" class="icon"></a>
+            <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" width="200" alt="Facebook logo" class="icon"></a>
             <a href="https://linkedin.com" target="_blank"><img src="images/linkedin.png" alt="LinkedIn logo" class="icon"></a>
         </div>
         <nav>
