--- a/lesson12/about-us.html
+++ b/lesson12/about-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="last project presentation wdd230">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Jugos La Cosecha</title>
+    <title>Bountiful Foods</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css"> 
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="bar">
                 <a class="logo" href="index.html">
-                    <h1 class="logo__name no-margin text-center">Jugos<span class="logo__bold">La Cosecha</span></h1>
+                    <h1 class="logo__name no-margin text-center">Bountiful<span class="logo__bold">Foods</span></h1>
                 </a>
                 <button class="ham"></button>
                 <nav>        
@@ -44,7 +44,7 @@
     </header>
         <main>
             <section class="about">
-                <h2 class="title__us">Jugos La Cosecha </h2>
+                <h2 class="title__us">Bountiful Foods </h2>
                 <p>Our business started back on 1990 as a family entrepreneurship in need of bringing the best of our fruits that have been
                     harvesting with dedication to bring each of our consumers satisfaction on every sip from our deliciout fruits made juice.
                     We have stores all around the country giving others the opportunity to work with us, creating employment.<br>
@@ -62,7 +62,7 @@
             <div class="container">
                 <div class="bar">
                     <a class="logo" href="index.html">
-                        <h1 class="logo__name no-margin text-center">Jugos<span class="logo__bold">La Cosecha</span></h1>
+                        <h1 class="logo__name no-margin text-center">Bountiful<span class="logo__bold">Foods</span></h1>
                         <p>3769 47TH ST<br> SAN DIEGO CA 92105</p>
                     </a>
     
