--- a/lesson12/fresh.html
+++ b/lesson12/fresh.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="last project presentation wdd230">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Jugos La Cosecha</title>
+    <title>Bountiful Foods</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css"> 
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="bar">
                 <a class="logo" href="index.html">
-                    <h1 class="logo__name no-margin text-center">Jugos<span class="logo__bold">La Cosecha</span></h1>
+                    <h1 class="logo__name no-margin text-center">Bountiful<span class="logo__bold">Foods</span></h1>
                 </a>
                 <button class="ham"></button>
                 <nav>        
@@ -36,9 +36,6 @@
                 <a href="https://linkedin.com" target="_blank"><img loading="lazy" src="img/instagram.png"  alt="Instagram logo" class="icon"></a>
                 <a href="https://linkedin.com" target="_blank"><img loading="lazy" src="img/twitter.png" alt="Twitter logo" class="icon"></a>
             </div>
-        </div>
-        <div class="header-text">
-            <h2>The Best Tropical Fruits</h2>        
         </div>
         <div class="header-text">
             <h2>The Best Tropical Fruits</h2>
@@ -78,7 +75,7 @@
             <div class="container">
                 <div class="bar">
                     <a class="logo" href="index.html">
-                        <h1 class="logo__name no-margin text-center">Jugos<span class="logo__bold">La Cosecha</span></h1>
+                        <h1 class="logo__name no-margin text-center">Bountiful<span class="logo__bold">Foods</span></h1>
                         <p>3769 47TH ST<br> SAN DIEGO CA 92105</p>
                     </a>
     
@@ -90,5 +87,6 @@
         <script src="js/weather.js"></script>
         <script src="js/dates.js"></script>
         <script src="js/ham.js"></script>
+        <script src="js/fresh.js"></script>
 </body>
 </html>
