--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="last project presentation wdd230">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Jugos La Cosecha</title>
+    <title>Bountiful Foods</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css"> 
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="bar">
                 <a class="logo" href="index.html">
-                    <h1 class="logo__name no-margin text-center">Jugos<span class="logo__bold">La Cosecha</span></h1>
+                    <h1 class="logo__name no-margin text-center">Bountiful<span class="logo__bold">Foods</span></h1>
                 </a>
                 <button class="ham"></button>
                 <nav>        
@@ -70,7 +70,6 @@
                     North inland San Diego, you’ll find Farm Stand West and Fran’s Original Farm Stand. Both are owned and operated by
                     the Hillebrecht family since the 60’s and offer a wide variety of fruits and vegetables grown on the family farm. 
                     Open year-round, they feature seasonal selections such as avocados, apricots, citrus, sweet peas, and local raw honey and nuts.</p>
-                    <a href="entry.html" class="button primary--button">Read Entry</a> 
                 </div>
             </article>
 
@@ -80,16 +79,14 @@
                 </div>
                 <div class="entry__content">
                     <h4 class="no-margin">Shakes</h4>
-                    <p>The sweet scent of peaches mixes with the bitter aroma of 
-                    <br>freshly brewed coffee as the melodies of local musicians
-                    <br>fill the air with energy. Piles of persimmons line up next to
+                    <p>The sweet scent of peaches mixes with the bitter aroma of freshly brewed coffee as the melodies of local musicians
+                    fill the air with energy. Piles of persimmons line up next to
                     <br>bunches of radishes as luscious bouquets of lavender sway in the breeze.
-                    <br>This calming scenery is common at California’s farmers markets, where
-                    <br>you can sample local honey, pick up a bottle of Golden State olive oil,
-                    <br>and grab street tacos to satiate your meal-planning hunger. While at the market,
-                    <br>you may also meet some of the farmers and find new inspiration for storing the week’s
-                    <br>produce or learn some new tips for improving your own garden. </p>
-                    <a href="entry.html" class="button primary--button">Read Entry</a> 
+                    <br>This calming scenery is common at California’s farmers markets, where you can sample local honey, pick up a bottle of Golden State olive oil,
+                    and grab street tacos to satiate your meal-planning hunger. While at the market,
+                    you may also meet some of the farmers and find new inspiration for storing the week’s
+                    produce or learn some new tips for improving your own garden. </p>
+                     
                 </div>
             </article>
 
@@ -102,7 +99,7 @@
                     <p>Protein plays an important role in repairing and rebuilding your muscles after exercise,
                      and many people use protein shakes after their workouts to aid this process. However, 
                      research suggests it doesn't matter whether you drink a protein shake before or after your workout. </p>
-                    <a href="entry.html" class="button primary--button">Read Entry</a> 
+                    
                 </div>
             </article>
         </main>
@@ -149,7 +146,7 @@
         <div class="container">
             <div class="bar">
                 <a class="logo" href="index.html">
-                    <h1 class="logo__name no-margin text-center">Jugos<span class="logo__bold">La Cosecha</span></h1>
+                    <h1 class="logo__name no-margin text-center">Bountiful<span class="logo__bold">Foods</span></h1>
                     <p>3769 47TH ST<br> SAN DIEGO CA 92105</p>
                 </a>
 
