--- a/camba/contactenos.html
+++ b/camba/contactenos.html
@@ -17,9 +17,9 @@
         <h1>Camba Abogados y Notarios<h1>
 
             <nav class="barra-navegacion">
-                <a href="#">Inicio</a>
-                <a href="#">Nuestros Servicios</a>
-                <a href="#">Contactenos</a>
+                <a href="index.html">Inicio</a>
+                <a href="nuestros-servicios.html">Nuestros Servicios</a>
+                <a href="contactenos.html">Contactenos</a>
             </nav>
 
     </header>
@@ -31,18 +31,18 @@
     </section> 
     
     <main>        
-        <section>
-            <h2 class="contacto">CONTÁCTENOS</h2>
+        <section class="contacto">
+            <h2 class="contacto__titulo">CONTÁCTENOS</h2>
             <div class="bloques">
                 <div class="bloque">
-                    <img src="images/address-icon.png" alt="address">
+                    <img class="icono" src="images/address-icon.png" alt="address">
                     <h4 class="bloque__titulo">Dirección de Oficina</h4>
                     <p>Limón, Pococí, Guapiles, <br>300 mts sur de la Universidad Latina, <br>Oficinas de Coopeande segundo piso</p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15706.594326573171!2d-83.7876982!3d10.2091665!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0b873ca61c4b9%3A0x73fcfeb5be4cdff4!2sCoopeAnde%20Gu%C3%A1piles!5e0!3m2!1ses-419!2scr!4v1677804768392!5m2!1ses-419!2scr" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
                 <div class="bloque">
-                    <img src="images/email-icon.png" alt="email">
+                    <img class="icono" src="images/email-icon.png" alt="email">
                     <h4 class="bloque__titulo">Correo Electrónico</h4>
                     <p>Lic. Javier Camba<br>jcamba@camba-asociados.com</p>
                     <p>Licda. Grettel Morales<br>gmorales@camba-asociados.com</p>
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="bloque">
-                    <img src="images/phone-icon.png" alt="phone">
+                    <img class="icono" src="images/phone-icon.png" alt="phone">
                     <h4>Números de Teléfono</h4>
                     <p>Lic. Javier Camba (506) 8320-7889</p>
                     <p>Licda. Grettel Morales (506) 8379-0393</p>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="bloque">
-                    <img src="images/whatsapp-icon.png" alt="whatsapp">
+                    <img class="icono" src="images/whatsapp-icon.png" alt="whatsapp">
                     <h4>Contacto WhatsApp</h4>
                     <p>Lic. Javier Camba (506) 8320-7889</p>
                     <p>Licda. Grettel Morales (506) 8379-0393</p>
@@ -74,7 +74,7 @@
             <h3 class="abogados-titulo">Camba Abogados y Notarios</h3>       
         </section>
         <div class="contact">
-            <h4>Dirección Oficina</h4>
+            <h4 class="address">Dirección Oficina</h4>
             <p>Limón, Pococí, Guapiles, <br>300 mts sur de la Universidad Latina, <br>Oficinas de Coopeande segundo piso</p>
             <p>Teléfono: (506) 2710-1141</p>
             <p>Email: jecamba@camba-asociados.com</p>
