--- a/camba/index.html
+++ b/camba/index.html
@@ -6,65 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camba & Asociados</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Indie+Flower&family=Krub:wght@400;700&family=Luxurious+Roman&display=swap" rel="stylesheet">
+    <link rel="preload" href="css/style.css" as="style">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <img class="top-logo" src="images/logo-blanco1.png" alt="logo">
-        <h1>Camba Abogados y Notarios<h1>
-
+        <h1>Camba Abogados<br>y Notarios<h1>
             <nav class="barra-navegacion">
-                <a href="#">Inicio</a>
-                <a href="#">Nuestros Servicios</a>
-                <a href="#">Contactenos</a>
+               <!--<button class="menu"><span id="ham" class="toggle-btn"> &#9776; </span><span id="xbutton" class="hidden toggle-btn"> X </span></button>--> 
+                <a href="index.html">Inicio</a>
+                <a href="nuestros-servicios.html">Nuestros<br> Servicios</a>
+                <a href="contactenos.html">Contactenos</a>
             </nav>
-
     </header>
     <section class="hero">
         <div>
-            <h2 class="quote">El Derecho desde una <br> Perspectiva Diferente</h2>
+            <h2 class="quote">El Derecho desde una <br>Perspectiva Diferente</h2>
             </div>            
         </div><!--contenido hero-->
     </section>  
     <main>
-        <h3>Nuestros Servicios Profesionales</h3>
-        <ul class="servicios">
-            <li>Lorem ipsum dolor sit amet consectetur dipisicing elit. 
-                magnam possimus assumenda ea obcaecati? Non, quisquam? nihil perspiciatis illum?</li> 
-            <li>Lorem ipsum dolor sit amet consectetur dipisicing elit.
-                magnam possimus assumenda ea obcaecati? Non, quisquam? nihil perspiciatis illum?</li>
-            <li>Lorem ipsum dolor sit amet consectetur dipisicing elit.
-                 magnam possimus assumenda ea obcaecati? Non, quisquam? nihil perspiciatis illum?</li>                    
-        </ul>
         <h3>Conozca a Nuestro Talento</h3>
         <section class="talento">
-            <img class="foto" src="images/abogado.png" alt="lic">
+            <img class="foto" src="images/Lic-Javier.jpg" alt="lic">
             <h4>Lic. Javier Ernesto Camba Burguillos</h4>
-            <p>Educación<br> Licenciatura en Derecho  <br>
-            Universidad Latina de Costa Rica, Especialidad en Dereho Notarial y Registral<br>
+            <h5>Educación </h5> 
+            <p>Licenciatura en Derecho - Universidad Latina de Costa Rica, Especialidad en Dereho Notarial y Registral<br>
             Universidad Fidélitas Especialista en Derecho Laboral con Análisis de Datos<br>
             Universidad Fundepos</p>
-            <p>Experencia Profesional<br>
-            El Licenciado Javier Camba se ha desarrollado principalmente en materia de cobro judicial y administrativo,
+            <h5> Experencia Profesional</h5>
+            <p>El Licenciado Javier Camba se ha desarrollado principalmente en materia de cobro judicial y administrativo,
                 derecho migratorio, trámites notariales y registrales, inscripción de marcas y nombres comerciales, así
                 como también en material corporativa de sociedades.  Laboró como asistente legal para la firma BG&A Abogados
                 Corporativos y posteriormente para la industrial de comercio electrónico donde brindó soporte relativos 
                 a cobros, pagos, análisis de riesgos y finalmente brindó soporte al departamento de Recursos Humanos en 
                 temas relativos a incapacidades, sanciones disciplinarias y licencias.
             </p>
+            <h5> Contacto:</h5> 
+            <p>Teléfono: (506) 8320-7889<br>Correo Electrónico: jecamba@camba-asociados.com </p>
         </section>
 
         <section class="talento">
-            <img class="foto" src="images/licenciada.jpg" alt="licda">    
+            <img class="foto" src="images/licenciada.jpg" alt="licda Grettel">    
             <h4 class="name">Licda. Grettel Mariela Morales Alfaro</h4>
-            <p>Educación<br>  Licenciatura en Derecho <br>
-            Universidad Latina de Costa Rica, Especialidad en Derecho Notarial y Regisgral <br>
+            <h5>Educación</h5>
+            <p>Licenciatura en Derecho - Universidad Latina de Costa Rica
+            <br> Especialidad en Derecho Notarial y Registral<br>
             Universidad de San José, Maestría Internacional en Derecho de Familia 
             Universidad Latina de Costa Rica</p>
-            <p>Experiencia Profesional</p>
+            <h5>Experiencia Profesional</h5>
             <p>Grettel se ha desempeñado de forma amplia en materia de Derecho de Familia asesorando a diversos
                 clientes en procesos de pensiones alimentarias, divorcios, temas de violencia doméstica, investigaciones
                 de paternidad, interrelación familiar, trámites internacionales como restitución de menores, así mismo
@@ -74,6 +67,38 @@
                 diversos clientes desde la etapa administrativa hasta su etapa judicial.  Cuenta con experiencia en el 
                 análisis de carteras de cobro, así como también en asesoría sobre confección y utilización de diversos
                 títulos ejecutivos y contratos mercantiles varios.</p>
+            <h5>Contacto:</h5>
+            <p>Teléfono: (506) 8617-8730<br>Correo Electrónico: gmorales@camba-asociados.com </p>
+        </section>
+
+        <section class="talento">
+            <img class="foto" src="images/licenciada-K.jpg" alt="licda Kenia">
+            <h4 class="name">Licda. Kenia Sulay Porras Sánchez</h4>
+            <h5>Educación</h5>
+            <p>Licenciatura en Derecho - Universidad Latina de Costa Rica, Especialidad en Derecho Notarial y Registral <br></p>
+            <h5>Experiencia Profesional</h5>
+            <p>Kenia se ha desempeñado principalmente en materia de tramitología ante instituciones públicas con
+                énfasis en temas obrero patronales ante la Caja Costarricense de Seguro Social.  Cuenta con amplia
+                experiencia en cuanto al tema de obligaciones patronales, su inscripción y tramitología.
+            </p>
+            <p>Adicionalmente ha representado exitosamente a múltiples clientes en materia de Cobro Judicial así 
+                como también en el área notarial
+            </p>
+            <h5>Contacto:</h5> <p>Teléfono: (506) 8559-8862<br>Correo Electrónico: Kprras@camba-asociados.com </p>
+        </section>
+
+        <section class="talento">
+            
+            <h4 class="name">Lic. José Pablo Castillo Cruz</h4>
+            <h5>Educación</h5>
+            <p>Licenciatura en Derecho - Universidad Latina de Costa Rica<br></p>
+            <h5>Experiencia Profesional</h5>
+            <p>José Pablo se desempeñó como funcionario judicial por alrededor de cinco años, laborando directamente
+                en asuntos de índole penal, lo cual le brindó las experiencias y competencias necesarias para el
+                correcto análisis, manejo e interpretación de casos de esta índole.  Así mismo cuenta con amplia 
+                experiencia en materia de cobro judicial.
+            </p>
+            <h5>Contacto:</h5> <p>Teléfono: (506) 8557-4434<br>Correo Electrónico: jpcastillo@camba-asociados.com </p>
         </section>
     </main>
     <hr>
@@ -83,13 +108,14 @@
             <h3 class="abogados-titulo">Camba Abogados y Notarios</h3>       
         </section>
         <div class="contact">
-            <h4>Dirección Oficina</h4>
+            <h4 class="address">Dirección Oficina</h4>
             <p>Limón, Pococí, Guapiles, <br>300 mts sur de la Universidad Latina, <br>Oficinas de Coopeande segundo piso</p>
             <p>Email: jecamba@camba-asociados.com</p>
             <a href="https://www.facebook.com/profile.php?id=100090174113965&mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="icon"></a>
             <a href="mailto:jecamba-asociados.com" target="_blank"><img src="images/email.png" alt="gmail logo" class="icon"></a> 
             <a href="#" target="_blank"><img src="images/location.png" alt="ubicacion" class="icon"></a>
-        </div>       
+        </div>     
     </footer>
+    <div class="footer-info">&copy;<span id="currentyear"></span>2023 Camba & Asociados, Costa Rica</div> 
 </body>
 </html>
