--- a/camba/index.html
+++ b/camba/index.html
@@ -116,6 +116,7 @@
             <a href="#" target="_blank"><img src="images/location.png" alt="ubicacion" class="icon"></a>
         </div>     
     </footer>
-    <div class="footer-info">&copy;<span id="currentyear"></span>2023 Camba & Asociados, Costa Rica</div> 
+    <div class="footer-info">&copy;<span id="currentyear"></span> Camba & Asociados, Costa Rica</div>
+    <script src="js/date.js"></script> 
 </body>
 </html>
