--- a/camba/index.html
+++ b/camba/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camba & Asociados</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Indie+Flower&family=Krub:wght@400;700&family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="preload" href="css/style.css" as="style">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
+    <link href="css/large.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
     </header>
     <section class="hero">
         <div>
-            <h2 class="quote">El Derecho desde una <br>Perspectiva Diferente</h2>
+            <h2 class="quote">El Derecho<br> desde una <br>Perspectiva<br> Diferente</h2>
             </div>            
         </div><!--contenido hero-->
     </section>  
@@ -73,7 +74,7 @@
 
         <section class="talento">
             <img class="foto" src="images/licenciada-K.jpg" alt="licda Kenia">
-            <h4 class="name">Licda. Kenia Sulay Porras Sánchez</h4>
+            <h4 class="name">Licda. Kenia Sulay Porras Sánchez<br>Asociado Externo</h4>
             <h5>Educación</h5>
             <p>Licenciatura en Derecho - Universidad Latina de Costa Rica, Especialidad en Derecho Notarial y Registral <br></p>
             <h5>Experiencia Profesional</h5>
@@ -84,12 +85,12 @@
             <p>Adicionalmente ha representado exitosamente a múltiples clientes en materia de Cobro Judicial así 
                 como también en el área notarial
             </p>
-            <h5>Contacto:</h5> <p>Teléfono: (506) 8559-8862<br>Correo Electrónico: Kprras@camba-asociados.com </p>
+            <h5>Contacto:</h5> <p>Teléfono: (506) 8559-8862<br>Correo Electrónico: jecamba@camba-asociados.com</p>
         </section>
 
         <section class="talento">
-            
-            <h4 class="name">Lic. José Pablo Castillo Cruz</h4>
+            <img class="foto" src="images/lic-JP.png" alt="lic JP">
+            <h4 class="name">Lic. José Pablo Castillo Cruz<br>Asociado Externo</h4>
             <h5>Educación</h5>
             <p>Licenciatura en Derecho - Universidad Latina de Costa Rica<br></p>
             <h5>Experiencia Profesional</h5>
@@ -98,7 +99,7 @@
                 correcto análisis, manejo e interpretación de casos de esta índole.  Así mismo cuenta con amplia 
                 experiencia en materia de cobro judicial.
             </p>
-            <h5>Contacto:</h5> <p>Teléfono: (506) 8557-4434<br>Correo Electrónico: jpcastillo@camba-asociados.com </p>
+            <h5>Contacto:</h5> <p>Teléfono: (506) 8557-4434<br>Correo Electrónico: jecamba@camba-asociados.com </p>
         </section>
     </main>
     <hr>
@@ -111,10 +112,11 @@
             <h4 class="address">Dirección Oficina</h4>
             <p>Limón, Pococí, Guapiles, <br>300 mts sur de la Universidad Latina, <br>Oficinas de Coopeande segundo piso</p>
             <p>Email: jecamba@camba-asociados.com</p>
-            <a href="https://www.facebook.com/profile.php?id=100090174113965&mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="icon"></a>
-            <a href="mailto:jecamba-asociados.com" target="_blank"><img src="images/email.png" alt="gmail logo" class="icon"></a> 
-            <a href="#" target="_blank"><img src="images/location.png" alt="ubicacion" class="icon"></a>
-        </div>     
+            <a class="social" href="https://www.facebook.com/profile.php?id=100090174113965&mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="icon"></a>
+            <a class="social" href="mailto:jecamba-asociados.com" target="_blank"><img src="images/email.png" alt="gmail logo" class="icon"></a> 
+            <a class="social" href="#" target="_blank"><img src="images/location.png" alt="ubicacion" class="icon"></a> 
+        
+        </div>             
     </footer>
     <div class="footer-info">&copy;<span id="currentyear"></span> Camba & Asociados, Costa Rica</div>
     <script src="js/date.js"></script> 
