--- a/camba/contactenos.html
+++ b/camba/contactenos.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
+    <link href="css/large.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,14 +20,14 @@
 
             <nav class="barra-navegacion">
                 <a href="index.html">Inicio</a>
-                <a href="nuestros-servicios.html">Nuestros Servicios</a>
+                <a href="nuestros-servicios.html">Nuestros<br> Servicios</a>
                 <a href="contactenos.html">Contactenos</a>
             </nav>
 
     </header>
     <section class="hero">
         <div>
-            <h2 class="quote">El Derecho desde una <br> Perspectiva Diferente</h2>
+            <h2 class="quote">El Derecho<br> desde una <br>Perspectiva<br> Diferente</h2>
             </div>            
         </div><!--contenido hero-->
     </section> 
@@ -76,12 +78,13 @@
         <div class="contact">
             <h4 class="address">Dirección Oficina</h4>
             <p>Limón, Pococí, Guapiles, <br>300 mts sur de la Universidad Latina, <br>Oficinas de Coopeande segundo piso</p>
-            <p>Teléfono: (506) 2710-1141</p>
             <p>Email: jecamba@camba-asociados.com</p>
-            <a href="https://www.facebook.com/profile.php?id=100090174113965&mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="icon"></a>
-            <a href="mailto:jecamba-asociados.com" target="_blank"><img src="images/email.png" alt="gmail logo" class="icon"></a> 
-            <a href="#" target="_blank"><img src="images/location.png" alt="ubicacion" class="icon"></a>
-        </div>       
+            <a class="social" href="https://www.facebook.com/profile.php?id=100090174113965&mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="icon"></a>
+            <a class="social" href="mailto:jecamba-asociados.com" target="_blank"><img src="images/email.png" alt="gmail logo" class="icon"></a> 
+            <a class="social" href="#" target="_blank"><img src="images/location.png" alt="ubicacion" class="icon"></a> 
+        
+        </div>      
     </footer>
+
 </body>
 </html>
