--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="description" content="The page ot the Guapiles Chamber of Commerce">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="css/small.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
