--- a/camba/contactenos.html
+++ b/camba/contactenos.html
@@ -48,7 +48,8 @@
                     <h4 class="bloque__titulo">Correo Electrónico</h4>
                     <p>Lic. Javier Camba<br>jcamba@camba-asociados.com</p>
                     <p>Licda. Grettel Morales<br>gmorales@camba-asociados.com</p>
-                    <p>Licda. Kenia Porras<br>kprras@camba-asociados.com</p>
+                    <p>Licda. Kenia Porras<br>jcamba@camba-asociados.com</p>
+                    <p>Lic. José Pablo Castillo<br>jcamba@camba-asociados.com</p>
                 </div>
 
                 <div class="bloque">
@@ -57,6 +58,7 @@
                     <p>Lic. Javier Camba (506) 8320-7889</p>
                     <p>Licda. Grettel Morales (506) 8379-0393</p>
                     <p>Licda. Kennia Porras (506) 8559-8862</p>
+                    <p>Lic. José Pablo Castillo (506) 8557-4434</p>
                 </div>
 
                 <div class="bloque">
@@ -85,6 +87,9 @@
         
         </div>      
     </footer>
+    <div class="footer-info">&copy;<span id="currentyear"></span> Camba & Asociados, Costa Rica</div>
+    <script src="js/date.js"></script>
+    <script src="js/ham.js"></script>
 
 </body>
 </html>
