--- a/camba/index.html
+++ b/camba/index.html
@@ -16,11 +16,13 @@
     <header>
         <img class="top-logo" src="images/logo-blanco1.png" alt="logo">
         <h1>Camba Abogados<br>y Notarios<h1>
-            <nav class="barra-navegacion">
-               <!--<button class="menu"><span id="ham" class="toggle-btn"> &#9776; </span><span id="xbutton" class="hidden toggle-btn"> X </span></button>--> 
-                <a href="index.html">Inicio</a>
-                <a href="nuestros-servicios.html">Nuestros<br> Servicios</a>
-                <a href="contactenos.html">Contactenos</a>
+            <nav>
+                <ul class="barra-navegacion">
+                    <li><a class="ham" href="#"><img src="images/ham-menu.png"></a></li>
+                    <li><a href="index.html">Inicio</a></li>             
+                    <li><a href="nuestros-servicios.html">Nuestros<br> Servicios</a></li>
+                    <li><a href="contactenos.html">Contactenos</a></li>
+                </ul>
             </nav>
     </header>
     <section class="hero">
@@ -119,6 +121,7 @@
         </div>             
     </footer>
     <div class="footer-info">&copy;<span id="currentyear"></span> Camba & Asociados, Costa Rica</div>
-    <script src="js/date.js"></script> 
+    <script src="js/date.js"></script>
+    <script src="js/ham.js"></script>
 </body>
 </html>
