--- a/camba/nuestros-servicios.html
+++ b/camba/nuestros-servicios.html
@@ -60,5 +60,8 @@
         
         </div>            
     </footer>
+    <div class="footer-info">&copy;<span id="currentyear"></span> Camba & Asociados, Costa Rica</div>
+    <script src="js/date.js"></script>
+    <script src="js/ham.js"></script>
 </body>
 </html>
